# openlingo

./: .gitignore  AGENTS.md  example.env.local  package.json  runcord-build.sh
agent-docs/02-Mar-2026-fix-scroll-touchpad-mousewheel/: plan.md  task.md
app/: globals.css  layout.tsx  page.tsx
app/(auth)/: layout.tsx
content/: testing-course.md  testing-unit-0.md  testing-unit-1.md  testing-unit-2.md  testing-unit-3.md  testing-unit-4.md  testing-unit-5.md  testing-unit-6.md  testing-unit-7.md
drizzle/: 0004_tidy_spencer_smythe.sql  0005_croatian_schema.sql
hooks/: use-audio.ts
lib/: auth.ts  constants.ts  email.ts  github.ts  languages.ts  tts.ts  turnstile-plugin.ts  turnstile.ts  words.ts
public/: manifest.json
refactor_rust/: .env.example  .gitignore  README.md  dev.sh  docker-compose.yml  package.json
refactor_rust/backend/: .env.example  Cargo.toml
refactor_rust/backend/migrations/: 0001_initial.sql
refactor_rust/backend/src/: config.rs  error.rs  main.rs  state.rs
refactor_rust/backend/src/ai/: mod.rs
refactor_rust/backend/src/articles/: jobs.rs  mod.rs
refactor_rust/backend/src/audio/: mod.rs
refactor_rust/backend/src/auth/: mod.rs  oauth_google.rs  turnstile.rs
refactor_rust/backend/src/content/: mod.rs
refactor_rust/backend/src/db/: mod.rs  models.rs
refactor_rust/backend/src/http/: articles.rs  audio.rs  auth.rs  chat.rs  content.rs  feedback.rs  me.rs  mod.rs  srs.rs  words.rs
refactor_rust/backend/src/services/: email.rs  github.rs  mod.rs  slack.rs
refactor_rust/backend/src/srs/: mod.rs
words/: croatian.json
(+134 files in other folders)
